syntax = "proto3";

package product;

service ProductService {
  rpc FindAllProducts (FindAllProductsRequest) returns (FindAllProductsResponse);
  rpc FindOneProduct (FindOneProductRequest) returns (FindOneProductResponse);
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message Product {
  string id = 1;
  string name = 2;
  float price = 3;
  int32 quantity = 4;
}

/*
  FindAllProducts
*/
message FindAllProductsRequest {
  string name = 1;
}

message FindAllProductsResponse {
  repeated Product data = 1;
}


/*
  FindOneProduct
*/
message FindOneProductRequest {
  string id = 1;
}

message FindOneProductResponse {
  Product data = 1;
}


/*
  CreateProduct
*/
message CreateProductRequest {
  string name = 1;
  float price = 2;
  int32 quantity = 3;
}

message CreateProductResponse {
  Product data = 1;
}


/*
  UpdateProduct
*/
message UpdateProductRequest {
  string id = 1;
  string name = 2;
  float price = 3;
}

message UpdateProductResponse {
  Product data = 1;
}


/*
  DeleteProduct
*/
message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}